# vktest

./: .gitignore  Makefile  REPORT.ipynb  preprocess.py  pyproject.toml
vktest/: dataset.py  decoder.py  decoder1.py  encoder.py  litmodel.py  model.py  modules.py  train.ipynb
vktest/utils/: dataset.py
