[tool.poetry]
name = "vktest"
version = "0.1.0"
description = ""
authors = ["Zurab Nurmagomedov <zurabnurmag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.1"
catalyst = "^21.5"
torchaudio = "^0.8.1"
torchvision = "^0.9.1"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
